# doggo-sakura-dscbot

./: blacklist.txt  economy.json  iteminfo.json  keep_alive.py  main.py  pyproject.toml  say_logs.txt  temp.py
Cogs/: Economy.py  Fun.py  Funcs.py  Server.py  keep_alive.py
Databases/: server_info.json  worklist.json
Text Files/: blacklist_logs.txt
