[tool.poetry]
name = "doggo-sakura-dscbot"
version = "0.1.0"
description = ""
authors = ["InfNik <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0-alpha.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
